[package]
name = "fields-glob"
version = "0.1.3"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["macro", "glob", "derive", "macro_rules", "proc-macro"]
categories = ["rust-patterns"]
description = "Derived glob macro with the same name as the structure"

license = "MIT"
repository = "https://github.com/A4-Tacks/fields-glob-rs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro-tool = "0.8.26"
